--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "main.js",
   "dependencies": {
     "adm-zip": "^0.4.13",
+    "autocomplete": "github:LucasionGS/AutoComplete",
     "electron": "^6.0.11",
+    "notif": "github:LucasionGS/notif",
     "std-pour": "^1.1.0"
   },
   "devDependencies": {},
